tests/machine/x/rust/group_items_iteration.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/group_items_iteration.rs:33:39
   |
33 |         tmp = append(tmp, Item { tag: g.key, total: total });
   |                                       ^^^^^ expected `i32`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq)]